[tool.poetry]
name = "production-debugging"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"
packages = [{include = "production_debugging"}]

[tool.poetry.dependencies]
python = "^3.9"
google-python-cloud-debugger = "^3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
isort = "^5.10.1"
mypy = "^0.990"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
